test/errors/branch-minus.rom
Error in `branch-minus.asm` on line 12: Branch address out of range
